added get all sendings usera